1. fix the paginator issue (page1); 2.change the layout format 3.begin to write

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,10 +21,11 @@
 <div class="container-fluid">
 <div class="row-fluid">
     <div class="page-header">
-        <h2>Spring <small>Whatever is worth doing, is worth doing well.</small></h2>
+        <h2>CodingME! <br/><small>Whatever is worth doing, is worth doing well.</small></h2>
     </div>
 </div>
 
+<!--
 <div class="row-fluid">
     <div class="navbar">
     <div class="navbar-inner">
@@ -36,20 +37,24 @@
     </div>
     </div>
 </div>
-
+-->
 
 <div class="row-fluid">
 
 <div class="span3">
-Side Bar!
+    <div class="row affix">
+
+    </div>
 </div>
 
 <div class="span9">
 
     <div>
+      <!--
       <div class="title">
         <a href="/">CodingME! Home</a>
       </div>
+      -->
       
       {{ content }}
       
