--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,64 +11,42 @@
    <!-- syntax highlighting CSS -->
    <link rel="stylesheet" href="{{site.url}}/assets/css/syntax.css" type="text/css" />
 
-   <!-- Typekit 
-   <script type="text/javascript" src="http://use.typekit.com/jpd0pfm.js"></script>
-   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-   -->
+   <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+   <script type="text/javascript" src="{{site.url}}/assets/js/jquery.toc.js"></script>
+   <link rel="stylesheet" href="{{site.url}}/assets/css/toc.css" />
+      
 </head>
 <body>
 
-<div class="container-fluid">
-<div class="row-fluid">
+<div class="container">
+<div class="row">
     <div class="page-header">
         <h2>CodingME! <br/><small>Whatever is worth doing, is worth doing well.</small></h2>
     </div>
 </div>
 
-<!--
-<div class="row-fluid">
-    <div class="navbar">
-    <div class="navbar-inner">
-        <a class="brand" href="/">Home</a>
-        <ul class="nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Link</a></li>
-        </ul>
-    </div>
-    </div>
-</div>
--->
+<div class="row">
 
-<div class="row-fluid">
-
-<div class="span3">
-    <div class="row affix">
-
-    </div>
+<div class="span3 sidebar">
+    <ul class="nav nav-tabs nav-stacked">
+        <li><a href="/">Home</a></li>
+    </ul>
 </div>
 
-<div class="span9">
-
+<div class="span9 content">
     <div>
-      <!--
-      <div class="title">
-        <a href="/">CodingME! Home</a>
-      </div>
-      -->
-      
       {{ content }}
-      
-      <div class="footer">
-        <div class="contact">
-          <p>Evans Yang.</p>
-        </div>
-      </div>
     </div>
+
+    <div class="footer">
+        <div class="contact">
+        </div>
+    </div>
+
 </div>
 
-
-</div>
-</div>
+</div> <!-- end of content row -->
+</div> <!-- end of container -->
 
 </body>
 </html>
