--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,11 +2,34 @@
 layout: default
 categories: me
 ---
-
 <h3>{{ page.title }}</h3>
+<div id="toc"></div>
+
 <div id="post">
 {{ content }}
 </div>
+
+<!-- The toc script should be put blow post content, or it cannot find the heads.  -->
+<script type="text/javascript">
+$('#toc').toc({
+    'selectors': 'h3,h4,h5', //elements to use as headings
+    'container': '#post', //element to find all selectors in
+    'smoothScrolling': true, //enable or disable smooth scrolling on click
+    'prefix': 'toc', //prefix for anchor tags and class names
+    'onHighlight': function(el) {}, //called when a new section is highlighted 
+    'highlightOnScroll': true, //add class to heading that is currently in focus
+    'highlightOffset': 100, //offset to trigger the next headline
+    'anchorName': function(i, heading, prefix) { //custom function for anchor name
+        return prefix+i;
+    },
+    'headerText': function(i, heading, $heading) { //custom function building the header-item text
+        return $heading.text();
+    },
+    'itemClass': function(i, heading, $heading, prefix) { // custom function for item class
+      return $heading[0].tagName.toLowerCase();
+    }
+});
+</script> <!-- end of toc script -->
 
 <div id="related">
   <h3>Related Posts</h3>
@@ -17,6 +40,7 @@ categories: me
   </ul>
 </div>
 
+<!-- Disqus comment -->
 <div id="disqus_thread"></div>
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
