--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,19 +15,22 @@
    <script type="text/javascript" src="{{site.url}}/assets/js/jquery.toc.js"></script>
    <link rel="stylesheet" href="{{site.url}}/assets/css/toc.css" />
       
+   <link rel="stylesheet" href="{{site.url}}/assets/css/codingme.css" />
 </head>
 <body>
 
 <div class="container">
 <div class="row">
     <div class="page-header">
+        <a href="/">
         <h2>CodingME! <br/><small>Whatever is worth doing, is worth doing well.</small></h2>
+        </a>
     </div>
 </div>
 
 <div class="row">
 
-<div class="span3 sidebar">
+<div class="span3 sidebar" style="display: none">
     <ul class="nav nav-tabs nav-stacked">
         <li><a href="/">Home</a></li>
     </ul>
