--- a/assets/css/codingme.css
+++ b/assets/css/codingme.css
@@ -2,3 +2,16 @@ a:link{ text-decoration:none ;}
 a:visited { text-decoration:none ; }
 a:hover {text-decoration:none;}
 a:active {text-decoration:none ; } 
+
+/*Font size when display a single post*/
+#post h1 { font-size: 22pt; }
+#post h2 { font-size: 18pt; }
+#post h3 { font-size: 16pt; }
+#post h4 { font-size: 15pt; }
+
+/*Font size when display post in paginator flow*/
+#paginator_content h1 { font-size: 18pt; }
+#paginator_content h2 { font-size: 16pt; }
+#paginator_content h3 { font-size: 15pt; }
+#paginator_content h4 { font-size: 14pt; }
+
