--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,6 +40,18 @@ $('#toc').toc({
   </ul>
 </div>
 
+<div class="ad">
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- cnblog  -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-9698965195198604"
+     data-ad-slot="0907793212"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
+
 <!-- Disqus comment -->
 <div id="disqus_thread"></div>
 <script type="text/javascript">
