--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }}</title>
    <meta name="author" content="Evans Yang" />
+   <meta name="google-site-verification" content="lxgwsr-2dvcmLtPEeasKm2BMfqLd-ogHZKhE8hLl-Xg" />
 
    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
    <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
@@ -47,16 +48,6 @@
     </div>
 </div>
 
-<div class="span9 ad">
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- cnblog  -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:90px"
-     data-ad-client="ca-pub-9698965195198604"
-     data-ad-slot="0907793212"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
 </div>
 </div>
 
