--- a/assets/css/codingme.css
+++ b/assets/css/codingme.css
@@ -3,13 +3,17 @@ a:visited { text-decoration:none ; }
 a:hover {text-decoration:none;}
 a:active {text-decoration:none ; } 
 
-h1 { font-size: 200% !important; font-weight: bold !important;}
+h1 { font-size: 180% !important; font-weight: bold !important;}
+h2 { font-size: 160% !important; font-weight: bold !important;}
+h3 { font-size: 140% !important; font-weight: bold !important;}
 
 /*Font size when display a single post*/
-#post h1 { font-size: 180% !important; font-weight: bold !important;}
-#post h2 { font-size: 150% !important; font-weight: bold !important;}
+#post h1 { font-size: 160% !important; font-weight: bold !important;}
+#post h2 { font-size: 140% !important; font-weight: bold !important;}
 #post h3 { font-size: 120% !important; font-weight: bold !important;}
 #post h4 { font-size: 100% !important; font-weight: bold !important;}
+
+blockquote p { font-size: 100% !important; }
 
 /*Font size when display post in paginator flow*/
 #paginator_content h1 { font-size: 18pt; }
