--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,9 @@
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }}</title>
    <meta name="author" content="Evans Yang" />
+
    <meta name="google-site-verification" content="lxgwsr-2dvcmLtPEeasKm2BMfqLd-ogHZKhE8hLl-Xg" />
+   <meta name="baidu-site-verification" content="J5rsS0t8bP" />
 
    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
    <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
@@ -24,7 +26,8 @@
 <div class="row">
     <div class="page-header">
         <a href="/">
-        <h2>CodingME! <br/><small>Whatever is worth doing, is worth doing well.</small></h2>
+        <!-- <h2>CodingME! <br/><small>Whatever is worth doing, is worth doing well.</small></h2> -->
+        <h2>Home</h2> 
         </a>
     </div>
 </div>
