--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,8 +19,11 @@
    <link rel="stylesheet" href="{{site.url}}/assets/css/toc.css" />
       
    <link rel="stylesheet" href="{{site.url}}/assets/css/codingme.css" />
+
+   <link href="{{site.url}}/assets/library/google-code-prettify/prettify.css" type="text/css" rel="stylesheet" />
+   <script type="text/javascript" src="{{site.url}}/assets/library/google-code-prettify/prettify.js"></script>   
 </head>
-<body>
+<body onload="prettyPrint()">
 
 <div class="container">
 <div class="row">
