--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
    <!-- syntax highlighting CSS -->
    <link rel="stylesheet" href="{{site.url}}/assets/css/syntax.css" type="text/css" />
 
-   <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+   <script type="text/javascript" src="{{site.url}}/assets/js/jquery-1.11.1.min.js"></script>
    <script type="text/javascript" src="{{site.url}}/assets/js/jquery.toc.js"></script>
    <link rel="stylesheet" href="{{site.url}}/assets/css/toc.css" />
       
